vlib/v/checker/tests/assign_const_ptr_int_literal_err.vv
const a = 3

fn main() {
	b := &a
	dump(b)
}
